--- a/INSTALL
+++ b/INSTALL
@@ -30,6 +30,8 @@ Python requirements:
     ua-parser
     user-agents
     pattern
+    num2words
+    Flask-WTF
 
 The front-end libraries need to be installed in the matcher/static directory.
 This list is the expected directory name, and the software required:
